--- a/web/pom.xml
+++ b/web/pom.xml
@@ -238,11 +238,11 @@
       <version>2.8.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.myjsoup</groupId>
-      <artifactId>jsoup</artifactId>
-      <version>1.7.3</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.myjsoup</groupId>-->
+      <!--<artifactId>jsoup</artifactId>-->
+      <!--<version>1.7.3</version>-->
+    <!--</dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
     <dependency>
